# voxtral_wyoming

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.cu130  LICENSE  README.md  docker-compose-cu130.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt  word_replacements.txt
.junie/: guidelines.md
examples/: client_sample.py
src/voxtral_wyoming/: __init__.py  audio.py  client_sample.py  server.py  text.py
src/voxtral_wyoming/transcriber/: __init__.py  base.py  dummy.py  voxtral.py
tests/: __init__.py  test_audio.py  test_transcriber_dummy.py
